--- a/briana-sealey-ADA-data-reanalysis-assignment.Rmd
+++ b/briana-sealey-ADA-data-reanalysis-assignment.Rmd
@@ -41,7 +41,7 @@ library(AICcmodavg)
 ```{r}
 #read in data
 d <- "Hemingway et al._2018_data.csv"
-data <- read_csv(d, col_names = TRUE) #reading in the data
+data <- read_csv(d, col_names = TRUE)
 
 #Taking a look at the data-set
 names(data)
@@ -93,7 +93,8 @@ grid.arrange(p2, p1, ncol = 2, nrow = 1)
 lm1 <- lm(prop ~ abs, data = plt)
 summary(lm1)
 lm2 <- lm(prop ~ rel, data = plt)
-summary(lm2) #This was not presented within the paper, but provided here to display quantitative differences between the two graphs.
+summary(lm2)
+#This was not presented within the paper, but provided here to display quantitative differences between the two graphs.
 ```
 
 ## Replications/Reanalysis
@@ -111,7 +112,8 @@ Replicated:
 #Obtaining proportion of choices observed
 data %>%
   group_by(Treatment) %>%
-  summarise(proportion = sum(Larger)/n()) -> proportion_results #relative differences calculation = (absolute diff/mean(number of calls of the two stimuli))
+  summarise(proportion = sum(Larger)/n()) -> proportion_results
+#relative differences calculation = (absolute diff/mean(number of calls of the two stimuli))
 proportion_results
 
 #some proportions calculated above are slightly different than those reported in the data set:
@@ -193,7 +195,7 @@ cbind(mypvalues, theirpvalues)
 
 So who is at fault for the difference in p-values? Perhaps I calculated different p-values because Hemingway et al used a different function or package to complete the binomial tests than I did. Or, similar to the proportion value calculations, Hemingway et al might have calculated the values from a differnet data set than what was uploaded online.
 
-I couldn't help but also notice the probability of success values. Here are Hemingway et al's probability of success values calcualted in the binomial test vs. their proportion of choice values calculated from earlier:
+I couldn't help but also notice the probability of success values. Here are my calculated probabilty of success values, Hemingway et al's probability of success values vs. their proportion of choice values calculated from earlier:
 
 ```{r}
 #Probabilty of success values from my binom test
@@ -253,7 +255,7 @@ aictab(val, weights = TRUE) #Delta AIC values are the same; also note Model 3 ca
 
 Discussion of the specificities in success for each replication are embedded in the text throughout this document. Overall, replications were successful, except for the the binomial test, when trying to replicate a few of the reported p-values and probabilty of success. Nonetheless, despite these differences, p-values still fell within the significant vs. insignificant threshold and probabiity of success were realitvely similar.
 
-Although not required, I would have liked to replicate the chi-square differences between models and the quadratic models, but I could not decipher the code in time before submitting this assignment. I think if the statiscal analysis section in the article provided the functions, package or strategy for testing the model comparisons using chi-square tests (and I had another weekend), I might have worked out the replication.
+Although not required, I would have liked to replicate the chi-square differences and the quadratic models, but I could not decipher the code in time before submitting this assignment. I think if the statiscal analysis section in the article provided the functions, package or strategy for testing the model comparisons using chi-square tests (and I had another weekend), I might have worked out the replication.
 
 This was a great exercise in practicing the replication of data in science. Research should not be falsified, fabricated or plagiarized. It's important that data can be replicated not only experimentally (set up the same experiment and repeat the tests) but also statistically (take someone else's data and replicate the calculations) to ensure that the scientific community are publishing honest work.
 
